crates/toml_edit/tests/snapshots/invalid/datetime/offset-overflow-minute.stderr
TOML parse error at line 1, column 5
  |
1 | d = 1985-06-18 17:04:07+12:60
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
invalid offset, expected minutes between 00 and 59
